# rs-trainz

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  sdkconfig.defaults
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  esp32-build.yml  release.yml
examples/: desktop_server.rs
src/: commands.rs  config.rs  lib.rs  messages.rs  parsing.rs  priority.rs  strategy_dyn.rs  throttle.rs  transition.rs
src/hal/: mock.rs  mod.rs
src/hal/esp32/: clock.rs  display.rs  encoder.rs  fault.rs  http.rs  mod.rs  motor.rs  mqtt.rs  wifi.rs
src/services/: api.rs  http_handler.rs  mod.rs  mqtt.rs  mqtt_runner.rs  physical.rs  shared.rs  web.rs
src/traits/: display.rs  hardware.rs  mod.rs  network.rs  strategy.rs
tests/: edge_cases.rs  throttle_tests.rs  web_api_tests.rs
www/: index.html
